--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=currency exchange
+
+logging.level.root=INFO
+logging.level.com.example.demo.controller.ConversionController=DEBUG
+logging.level.com.example.demo.service.SwopExchangeRateService=INFO
