--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-cache:3.4.3'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'
 	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.0'
+	implementation 'org.slf4j:slf4j-api:2.0.16'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
